--- a/cliente/package.json
+++ b/cliente/package.json
@@ -13,6 +13,7 @@
     "html2pdf.js": "^0.10.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.4",
